# MachineLearning

./: README.md
00-linear-regression/: LinearRegression.py
00-linear-regression-c/: CMakeLists.txt
00-linear-regression-cpp/: CMakeLists.txt  LinearRegression.h  readme.md  test.cpp
001-gradient-descent/: gradient-descent.c  gradient-descent.py
01-kNN/: classify0.py  createClassify0Plot.py  createDatingPlots.py  foo.py  foo.txt  kNN.py  kNN_callback.py
02-decisionTrees/: 01-pureDecisionTree.py  decisionTrees.xml  treePlotter.py  trees.py
03-bayes/: bayes.py  bayesFoo.py  bayesLikeOrNot.py
04-logistic-regression/: LSEReg.py  logRegres.py  myLogRegres.py
05-svm/: completeSMO.py  mySVM.py  svmML.py
08-regression/: regression.py
09-k-means/: kMeans.py
10-k-means/: kMeans.py
13-PCA/: testSet.txt  testSet3.txt
LinearRegression/: CMakeLists.txt  Utils.cpp  Utils.h  main  main.cpp
pandas/: 01-hello-pandas.py  02-hello-pandas.py  03-io-basics.py  04-build-dataset.py  05-append-concat-df.py  06-join-merge-df.py  07-pickle.py  08-change-correlation.py  09-resample.py  10-handle-missing-data.py  11-rolling-statistics.py  12-comparison-oprators.py  13-join-30yr-mortgage.py  14-add-economic-indicators.py  15-mapping-with-labels.py  16-scikit-learning.py  HPI.pickle  NBSC-A0L090D_A.csv  PE_no_headers.csv  SH_PER.html  Shanghai_PERatio.csv  pd-inner.pickle  py-states-data.pickle
samples/: imgCrawler.py
scratch/: linear_pure_test.py  linear_test.py  readme.md  test.py
sentdex/: 00-regression.py  GOOGLE-2017-10-09.pickle
tensorflow/: helloTF.py
(+49 files in other folders)
